--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<p>As a user:</p>
+<ul>
+  <li>I want to send sms messages to a phone number</li>
+  <li>I want to send sms message to a phone number and have it respond</li>
+  <li>I want to ask certain questions (i.e. what's the weather in houston?) and get an intelligible response</li>
+  <li>I want the system to reply with quirky messages after x minutes/hours/etc to see if I'm still there</li>
