Username or email label

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,3 +4,5 @@
   <li>I want to send sms message to a phone number and have it respond</li>
   <li>I want to ask certain questions (i.e. what's the weather in houston?) and get an intelligible response</li>
   <li>I want the system to reply with quirky messages after x minutes/hours/etc to see if I'm still there</li>
+  <li>When I signup I want a welcome text to be sent to start the dialog</li>
+</ul>
