Setup knowledge table for k/v pairing

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,3 +6,5 @@
   <li>I want the system to reply with quirky messages after x minutes/hours/etc to see if I'm still there</li>
   <li>When I signup I want a welcome text to be sent to start the dialog</li>
 </ul>
+
+<h4>Welcome <%= @user.full_name %>
