Welcome a quest and avoid nil

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,4 +7,4 @@
   <li>When I signup I want a welcome text to be sent to start the dialog</li>
 </ul>
 
-<h4>Welcome <%= @user.full_name %>
+<h4>Welcome <%= @user %>
